--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="hero-text">
           <h5>Hi I'm <span class="input"></span></h5>
-          <h1>Melany Kunzi</h1>
+          <h1>Brakions</h1>
           <p>Welcome to my programming portfolio! I'm a highly motivated and enthusiastic
             programmer with a deep love for writing code and solving complex problems.</p></br>
           <p>On this site, you'll find examples of my projects and the technologies I've
