--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             industry. Thank you for visiting my portfolio!</p>
 
           <div class="btn-group">
-            <a href="./pdfs/cvMELANYKUNZI.pdf" download="cvMELANYKUNZI.pdf" class="btn active">Download CV</a>
+            <a href="./pdfs/CV Luis Ramos.pdf" download="CV Luis Ramos.pdf" class="btn active">Download CV</a>
             <a href="#contactform" class="btn">Contact</a>
           </div>
           <div class="social">
