--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <div class="container">
         <div class="hero-pic">
-          <img src="imagenes/Foto.png" alt="profile pic">
+          <img src="Imagenes/Foto.png" alt="profile pic">
         </div>
         <div class="hero-text">
           <h5>Hi I'm <span class="input"></span></h5>
@@ -53,8 +53,8 @@
           </div>
           <div class="social">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/melanykunzi/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/melanykunzi" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/luisbrandon/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Brakions" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
           </div>
         </div>
@@ -300,11 +300,11 @@
               <span>CONTACT</span>
               <span>ME</span>
             </div>
-            <div class="app-contact">MELANYKUNZI@GMAIL.COM</div>
+            <div class="app-contact">Brakions@HOTMAIL.COM</div>
           </div>
           <div class="screen-body-item">
             <div class="app-form">
-              <form action="https://formsubmit.co/melanykunzi@gmail.com" method="POST">
+              <form action="https://formsubmit.co/Brakions@hotmail.com" method="POST">
                 <div class="app-form-group">
                   <input class="app-form-control" type="text" name="name" placeholder="NAME">
                 </div>
@@ -320,7 +320,7 @@
                 <div class="app-form-group buttons">
                   <input class="app-form-button" type="submit" value="SEND">
                 </div>
-                <input type="hidden" name="_next" value="https://melanykunzi.github.io/">
+                <input type="hidden" name="_next" value="https://Brakions.github.io/">
                 <input type="hidden" name="_captcha" value="false">
               </form>
 
@@ -342,7 +342,7 @@
         });
 
         let typed = new Typed(".input", {
-          strings: ["Web Development Student", "Fullstack Developer", "QA Analyst"],
+          strings: ["Data Scientist", "Data Analyst", "Machine Learning"],
           typeSpeed: 70,
           backSpeed: 35,
           loop: true
