--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         });
 
         let typed = new Typed(".input", {
-          strings: ["Data Scientist", "Data Analyst", "Machine Learning"],
+          strings: ["Data Scientist", "Data Analyst", "Machine Learning Engineer"],
           typeSpeed: 70,
           backSpeed: 35,
           loop: true
