--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
       <div class="stacks">
         <div class="stack-card">
           <img
-            src="https://cdn.jsdelivr.net/gh/creativoma/assets-creativoma@main/language-and-tools-logos/export-svg/html5.svg"
+            src="https://logos-world.net/imageup/Tableau/Tableau%20(3).png"
             alt="HTML5">
           <div class="details">
             <div class="text">
-              <h4>HTML5</h4>
-              <h5>Markup Language</h5>
+              <h4>Tableau</h4>
+              <h5>Business analytics service</h5>
             </div>
             <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank">
               <div class="icon">
@@ -230,14 +230,14 @@
         </div>
         <div class="stack-card">
           <img
-            src="https://cdn.jsdelivr.net/gh/creativoma/assets-creativoma@main/language-and-tools-logos/export-svg/css3.svg"
-            alt="CSS3">
+            src="https://download.logo.wine/logo/Power_BI/Power_BI-Logo.wine.png"
+            alt="PowerBI">
           <div class="details">
             <div class="text">
-              <h4>CSS3</h4>
-              <h5>Style Sheet Language</h5>
+              <h4>PowerBI</h4>
+              <h5>Business analytics service</h5>
             </div>
-            <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank">
+            <a href="https://learn.microsoft.com/en-us/training/powerplatform/power-bi" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
@@ -246,14 +246,14 @@
         </div>
         <div class="stack-card">
           <img
-            src="https://cdn.jsdelivr.net/gh/creativoma/assets-creativoma@main/language-and-tools-logos/export-svg/javascript.svg"
-            alt="Javascript">
+            src="https://download.logo.wine/logo/MySQL/MySQL-Logo.wine.png"
+            alt="MySQL">
           <div class="details">
             <div class="text">
-              <h4>Javascript</h4>
-              <h5>Programming language</h5>
+              <h4>MySQL</h4>
+              <h5> Database management system.</h5>
             </div>
-            <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">
+            <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
@@ -262,14 +262,14 @@
         </div>
         <div class="stack-card">
           <img
-            src="https://download.logo.wine/logo/C%2B%2B/C%2B%2B-Logo.wine.png"
-            alt="C++">
+            src="https://download.logo.wine/logo/Python_(programming_language)/Python_(programming_language)-Logo.wine.png"
+            alt="Python">
           <div class="details">
             <div class="text">
-              <h4>C++</h4>
+              <h4>Python</h4>
               <h5>Programming language</h5>
             </div>
-            <a href="https://learn.microsoft.com/es-es/cpp/?view=msvc-170" target="_blank">
+            <a href="https://learn.microsoft.com/es-es/training/modules/intro-to-python/" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
