--- a/index.html
+++ b/index.html
@@ -274,6 +274,40 @@
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
             </a>
+            </a>
+          </div>
+        </div>
+        <div class="stack-card">
+          <img
+            src="https://download.logo.wine/logo/MySQL/MySQL-Logo.wine.png"
+            alt="MySQL">
+          <div class="details">
+            <div class="text">
+              <h4>MySQL</h4>
+              <h5> Database management system.</h5>
+            </div>
+            <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
+              <div class="icon">
+                <i class="fa-solid fa-arrow-up"></i>
+              </div>
+            </a>
+            </a>
+        </div>
+    </div>
+    <div class="stack-card">
+        <img
+        src="https://download.logo.wine/logo/MySQL/MySQL-Logo.wine.png"
+        alt="MySQL">
+        <div class="details">
+        <div class="text">
+            <h4>MySQL</h4>
+            <h5> Database management system.</h5>
+        </div>
+        <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
+            <div class="icon">
+            <i class="fa-solid fa-arrow-up"></i>
+            </div>
+        </a>
           </div>
         </div>
       </div>
