--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
     </div>
     <div class="stack-card">
         <img
-        src="https://download.logo.wine/logo/MySQL/MySQL-Logo.wine.png"
-        alt="MySQL">
+        src="Imagenes\streamlit-logo-primary-colormark-lighttext.png"
+        alt="Streamlit">
         <div class="details">
         <div class="text">
-            <h4>MySQL</h4>
-            <h5> Database management system.</h5>
+            <h4>Streamlit</h4>
+            <h5> Open-source app framework</h5>
         </div>
         <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
             <div class="icon">
