--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <h4>Streamlit</h4>
             <h5> Open-source app framework</h5>
         </div>
-        <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
+        <a href="https://docs.streamlit.io" target="_blank">
             <div class="icon">
             <i class="fa-solid fa-arrow-up"></i>
             </div>
