--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               <h4>MySQL</h4>
               <h5> Database management system.</h5>
             </div>
-            <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
+            <a href="https://www.mysqltutorial.org/mysql-basics/" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
@@ -286,7 +286,7 @@
               <h4>MySQL</h4>
               <h5> Database management system.</h5>
             </div>
-            <a href="https://learn.microsoft.com/es-es/training/paths/sql-server-upgrades/" target="_blank">
+            <a href="https://www.mysqltutorial.org/mysql-basics/" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
