--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
         </div>
         <div class="stack-card">
           <img
-            src="https://download.logo.wine/logo/MySQL/MySQL-Logo.wine.png"
-            alt="MySQL">
+            src="https://download.logo.wine/logo/Microsoft_Azure/Microsoft_Azure-Logo.wine.png"
+            alt="Microsoft Azure">
           <div class="details">
             <div class="text">
-              <h4>MySQL</h4>
-              <h5> Database management system.</h5>
+              <h4>Microsoft_Azure</h4>
+              <h5> Microsoft's public cloud platform</h5>
             </div>
-            <a href="https://www.mysqltutorial.org/mysql-basics/" target="_blank">
+            <a href="https://learn.microsoft.com/en-us/training/azure/" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
