--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="images/reloj.png" alt="">
+          <img src="Imagenes\Alteryx.jpg" alt="">
           <div class="details">
             <div class="text">
               <h4>Clock</h4>
               <h5>Web Application</h5>
             </div>
-            <a href="./reloj/index.html" target="_blank">
+            <a href="https://github.com/Brakions/Alteryx---SQL" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
