--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="images/drumkit.png" alt="">
+          <img src="https://user-images.githubusercontent.com/93687273/200126368-f18ddd88-e6e8-439c-aed5-8c3c459f4273.gif" alt="">
           <div class="details">
             <div class="text">
-              <h4>Drum Kit</h4>
+              <h4>Streamlit</h4>
               <h5>Web Application</h5>
             </div>
             <a href="./drumkit/index.html" target="_blank">
@@ -195,8 +195,8 @@
           <img src="Imagenes\Alteryx.jpg" alt="">
           <div class="details">
             <div class="text">
-              <h4>Clock</h4>
-              <h5>Web Application</h5>
+              <h4>Alteryx</h4>
+              <h5>Git Hub proyect</h5>
             </div>
             <a href="https://github.com/Brakions/Alteryx---SQL" target="_blank">
               <div class="icon">
