--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <h4>Streamlit</h4>
               <h5>Web Application</h5>
             </div>
-            <a href="./drumkit/index.html" target="_blank">
+            <a href="https://brakions-streamlit-test-app-ifwq1h.streamlit.app" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
