--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="images/piano.png" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/1200px-Jupyter_logo.svg.png" alt="">
           <div class="details">
             <div class="text">
-              <h4>Piano</h4>
-              <h5>Web Application</h5>
+              <h4>ModelPredict</h4>
+              <h5>Project Jupyter</h5>
             </div>
-            <a href="./piano/index.html" target="_blank">
+            <a href="https://github.com/team1ndata/InData/blob/main/MachineLearning/ModelPredict/Life_Expentancy_Model.ipynb" target="_blank">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up"></i>
               </div>
@@ -154,7 +154,7 @@
           <div class="details">
             <div class="text">
               <h4>Validación de Datos</h4>
-              <h5>GitHub proyect</h5>
+              <h5>GitHub project</h5>
             </div>
             <a href="https://github.com/team1ndata/InData/tree/main/Validación%20de%20Datos" target="_blank">
               <div class="icon">
@@ -168,7 +168,7 @@
           <div class="details">
             <div class="text">
               <h4>Life-Expectancy</h4>
-              <h5>GitHub proyect</h5>
+              <h5>GitHub project</h5>
             </div>
             <a href="https://github.com/team1ndata/InData" target="_blank">
               <div class="icon">
@@ -196,7 +196,7 @@
           <div class="details">
             <div class="text">
               <h4>Alteryx</h4>
-              <h5>Git Hub proyect</h5>
+              <h5>Git Hub project</h5>
             </div>
             <a href="https://github.com/Brakions/Alteryx---SQL" target="_blank">
               <div class="icon">
