--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="hero-text">
           <h5>Hi I'm <span class="input"></span></h5>
           <h1>Brakions</h1>
-          <p>Welcome to my programming portfolio! I'm a highly motivated and enthusiastic
-            programmer with a deep love for writing code and solving complex problems.</p></br>
+          <p>Welcome to my portfolio! I'm a highly motivated and enthusiastic
+            with a deep love for writing code and solving complex problems.</p></br>
           <p>On this site, you'll find examples of my projects and the technologies I've
             worked with, as well as my educational background and my future career aspirations. I am always open to new
             opportunities and would love to connect with others in the
