--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         });
 
         let typed = new Typed(".input", {
-          strings: ["Data Scientist", "Data Analyst", "Machine Learning Engineer"],
+          strings: ["Data Scientist", "Data Analyst", "Data Engineer"],
           typeSpeed: 70,
           backSpeed: 35,
           loop: true
