--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <h1>Luis Brandon</h1>
           <p>¡Bienvenidos a mi portafolio! Soy una persona muy motivada y entusiasta.
             con un profundo amor por escribir código y resolver problemas complejos.</p></br>
-          <p>En este sitio encontrará ejemplos de mis proyectos y las tecnologías que he
-            trabajé, así como mi formación académica y mis aspiraciones profesionales futuras. Siempre estoy abierto a lo nuevo.
-            oportunidades y me encantaría conectarme con otras personas en el
-            industria. ¡Gracias por visitar mi portafolio!</p>
+          <p>En este sitio encontrará ejemplos de mis proyectos y las tecnologías que he trabajado,
+            así como mi formación académica y mis aspiraciones profesionales futuras.
+            Siempre estoy abierto a las nuevas oportunidades y me encantaría conectarme con otras personas en la industria.
+            ¡Gracias por visitar mi portafolio!</p>
 
 
           <div class="btn-group">
