--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <div class="container">
         <div class="hero-pic">
-          <img src="Imagenes/iconnn.png" alt="profile pic">
+          <img src="Imagenes/icono.png" alt="profile pic">
         </div>
         <div class="hero-text">
           <h5>Hi I'm <span class="input"></span></h5>
